--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "gc_iview": "^1.6.12",
+    "iview": "^3.5.4",
+    "lodash": "^4.17.15",
     "vue": "^2.6.11",
-    "vue-router": "^3.1.5"
+    "vue-router": "^3.1.5",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.2.0",
@@ -22,6 +26,8 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^6.1.2",
+    "less": "^3.11.1",
+    "less-loader": "^5.0.0",
     "prettier": "^1.19.1",
     "vue-template-compiler": "^2.6.11"
   }
